--- a/public/css/MsgChat.css
+++ b/public/css/MsgChat.css
@@ -57,3 +57,11 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+
+li.list-group-item:hover {
+    background-color: #EEEEEE;
+}
+
+li.list-group-item.activeja{
+    background-color: #DDDDDD;
+}
